disqus integration attempt

--- a/_posts/2017-02-16-paris.md
+++ b/_posts/2017-02-16-paris.md
@@ -5,6 +5,7 @@ tags:
 - travel 
 - photography
 - paris
+id: paris
 ---
 
 Of small dogs, and selfie loving tourists, to crowds that become art in admiration of art.
