--- a/_posts/2017-02-16-paris.md
+++ b/_posts/2017-02-16-paris.md
@@ -16,109 +16,109 @@ Of small dogs, and selfie loving tourists, to crowds that become art in admirati
 ### The Sights 
 
 #### Louvre
-![sights_1](/assets/paris/sights/P1010268-Edit-Edit.jpg?raw=true)
+<img src="/assets/paris/sights/P1010268-Edit-Edit.jpg" width="100%">
 
-![sights_2](/assets/paris/sights/P1010248.jpg?raw=true)
+<img src="/assets/paris/sights/P1010248.jpg" width="100%">
 
 #### Notre Dame 
-![sights_3](/assets/paris/sights/P1010135-Edit.jpg?raw=true)
+<img src="/assets/paris/sights/P1010135-Edit.jpg" width="100%">
 
-![sights_4](/assets/paris/sights/P1010142.jpg?raw=true)
+<img src="/assets/paris/sights/P1010142.jpg" width="100%">
 
-![sights_5](/assets/paris/sights/P1010158.jpg?raw=true)
+<img src="/assets/paris/sights/P1010158.jpg" width="100%">
 
-![sights_6](/assets/paris/sights/P1010161.jpg?raw=true)
+<img src="/assets/paris/sights/P1010161.jpg" width="100%">
 
 #### Arc de Triomphe
-![sights_7](/assets/paris/sights/P1010211.jpg?raw=true)
+<img src="/assets/paris/sights/P1010211.jpg" width="100%">
 
 #### Musée d'Orsay
-![sights_8](/assets/paris/sights/P1010562.jpg?raw=true)
+<img src="/assets/paris/sights/P1010562.jpg" width="100%">
 
-![sights_9](/assets/paris/sights/P1010593.jpg?raw=true)
+<img src="/assets/paris/sights/P1010593.jpg" width="100%">
 
 #### Seine 
-![sights_10](/assets/paris/sights/P1010611-Edit-Edit-2.jpg?raw=true)
+<img src="/assets/paris/sights/P1010611-Edit-Edit-2.jpg" width="100%">
 
-![sights_11](/assets/paris/sights/P1010621.jpg?raw=true)
+<img src="/assets/paris/sights/P1010621.jpg" width="100%">
 
 #### Eiffel Tower 
-![sights_12](/assets/paris/sights/P1010624.jpg?raw=true)
+<img src="/assets/paris/sights/P1010624.jpg" width="100%">
 
-![sights_13](/assets/paris/sights/P1010617.jpg?raw=true)
+<img src="/assets/paris/sights/P1010617.jpg" width="100%">
 
 ### Impressions From The Streets
 
-![street_1](/assets/paris/street/P1010170-Edit.jpg?raw=true)
+<img src="/assets/paris/street/P1010170-Edit.jpg" width="100%">
 
-![street_2](/assets/paris/street/P1010072-Edit.jpg?raw=true)
+<img src="/assets/paris/street/P1010072-Edit.jpg" width="100%">
 
 #### .. and the ever present small dogs
-![street_3](/assets/paris/street/P1010131-Edit-2.jpg?raw=true)
+<img src="/assets/paris/street/P1010131-Edit-2.jpg" width="100%">
 
 ### The Selfie Malady
 
 #### It is everywhere
-![selfie_1](/assets/paris/selfies/P1010096.jpg?raw=true)
+<img src="/assets/paris/selfies/P1010096.jpg" width="100%">
 
-![selfie_2](/assets/paris/selfies/P1010101.jpg?raw=true)
+<img src="/assets/paris/selfies/P1010101.jpg" width="100%">
 
-![selfie_3](/assets/paris/selfies/P1010127.jpg?raw=true)
+<img src="/assets/paris/selfies/P1010127.jpg" width="100%">
 
 #### Even the statues are into it 
-![selfie_4](/assets/paris/selfies/P1010565.jpg?raw=true)
+<img src="/assets/paris/selfies/P1010565.jpg" width="100%">
 
 #### .. and some more 
-![selfie_5](/assets/paris/selfies/P1010591.jpg?raw=true)
+<img src="/assets/paris/selfies/P1010591.jpg" width="100%">
 
 ### Art, Some People Making Art, and Others Being Art
 
-![art_1](/assets/paris/art/P1010426.jpg?raw=true)
+<img src="/assets/paris/art/P1010426.jpg" width="100%">
 
-![art_2](/assets/paris/art/P1010437.jpg?raw=true)
+<img src="/assets/paris/art/P1010437.jpg" width="100%">
 
-![people_art_1](/assets/paris/people_art/P1010493.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010493.jpg" width="100%">
 
-![art_3](/assets/paris/art/P1010466.jpg?raw=true)
+<img src="/assets/paris/art/P1010466.jpg" width="100%">
 
-![art_4](/assets/paris/art/P1010467.jpg?raw=true)
+<img src="/assets/paris/art/P1010467.jpg" width="100%">
 
-![art_5](/assets/paris/art/P1010473.jpg?raw=true)
+<img src="/assets/paris/art/P1010473.jpg" width="100%">
 
-![people_art_2](/assets/paris/people_art/P1010451.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010451.jpg" width="100%">
 
-![people_art_3](/assets/paris/people_art/P1010446.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010446.jpg" width="100%">
 
-![art_6](/assets/paris/art/P1010529.jpg?raw=true)
+<img src="/assets/paris/art/P1010529.jpg" width="100%">
 
-![art_7](/assets/paris/art/P1010574.jpg?raw=true)
+<img src="/assets/paris/art/P1010574.jpg" width="100%">
 
-![art_8](/assets/paris/art/P1010487.jpg?raw=true)
+<img src="/assets/paris/art/P1010487.jpg" width="100%">
 
-![art_9](/assets/paris/art/P1010501.jpg?raw=true)
+<img src="/assets/paris/art/P1010501.jpg" width="100%">
 
-![art_10](/assets/paris/art/P1010469.jpg?raw=true)
+<img src="/assets/paris/art/P1010469.jpg" width="100%">
 
-![art_11](/assets/paris/art/P1010500.jpg?raw=true)
+<img src="/assets/paris/art/P1010500.jpg" width="100%">
 
 #### People Being Art
-![people_art_4](/assets/paris/people_art/P1010464.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010464.jpg" width="100%">
 
-![people_art_5](/assets/paris/people_art/sitting.jpg?raw=true)
+<img src="/assets/paris/people_art/sitting.jpg" width="100%">
 
-![people_art_11](/assets/paris/people_art/P1010518.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010518.jpg" width="100%">
 
-![people_art_12](/assets/paris/people_art/P1010532.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010532.jpg" width="100%">
 
-![people_art_13](/assets/paris/people_art/P1010547.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010547.jpg" width="100%">
 
 #### More People Making Art
-![people_art_6](/assets/paris/people_art/P1010152.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010152.jpg" width="100%">
 
-![people_art_7](/assets/paris/people_art/P1010524.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010524.jpg" width="100%">
 
-![people_art_8](/assets/paris/people_art/P1010476.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010476.jpg" width="100%">
 
-![people_art_9](/assets/paris/people_art/P1010405.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010405.jpg" width="100%">
 
-![people_art_10](/assets/paris/people_art/P1010583.jpg?raw=true)
+<img src="/assets/paris/people_art/P1010583.jpg" width="100%">
