--- a/_posts/2020-01-01-SelecSLS.md
+++ b/_posts/2020-01-01-SelecSLS.md
@@ -36,7 +36,7 @@ Now, there is a caveat here. ESPNet would still be faster if a dataflow aware sc
 Thus, I went back to using regular convolutions. To reduce the computational costs, I adopted pointwise convolutions (1x1) to modulate the number of feature channels before 3x3 convolutions. I evaluated some tens of manually designed combinations of feature transformation and aggregation. In Fig. 2 below, some of the intermediate variants can be seen. The network in the middle bears close resemblance to Res2Net [2] architecture, and the network on the right is approaching the final design of SelecSLS Net [3]. The final variants of SelecSLS Net (Fig. 4) were obtained from the design on the right by removing the hierarchical feature aggregation, and only having concatenative skip connections. Additional inter-module skip connectivity was also introduced. See the [paper](https://arxiv.org/abs/1907.00837) for details and evaluations of the final variants.
 VoVNet architecture [4], which also came out in Spring 2019, also shares some similarities with the building block of SelecSLS Net, but does not use inter-module long-range skip connectivity, and is not as fast, and not as GPU memory efficient as SelecSLS Net.
 
-The network architecture was called *DLNAS Net* till very late in the paper writing process (Winter 2018/19). It was promptly changed when my supervisor learned that it stood for "Dushyant's Late Night Architecture Search".
+The network architecture was called *DLNAS Net* till very late in the paper writing process (Winter 2018/19). The name was promptly changed when my supervisor learned that it stood for "Dushyant's Late Night Architecture Search" :) .
 
 
 <figure class="figcenter">
@@ -46,7 +46,7 @@ The network architecture was called *DLNAS Net* till very late in the paper writ
 
 <figure class="figcenter">
   <img src="/assets/selecsls/selecsls.jpg" alt="SelecSLS Arch" width="50%" display="block" margin-left="auto" margin-right="auto">
-  <figcaption>Fig 4: The building blocks, and some of the connectivity considerations for SelecSLS Net [3]. Sparse, and short range concatenative skip connections with the module, and long range inter-module connectivity promote information flow through the network. </figcaption>
+  <figcaption>Fig 4: The building blocks, and some of the connectivity considerations for SelecSLS Net [3]. Sparse, and short range concatenative skip connections within the module, and long range inter-module connectivity promote information flow through the network. </figcaption>
 </figure> 
 
 ### Salient Features and Performance
